--- a/IntelligenceQuest/IntelligenceQuest.vcxproj
+++ b/IntelligenceQuest/IntelligenceQuest.vcxproj
@@ -158,6 +158,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="collider_boundary.h" />
     <ClInclude Include="collider_polygon.h" />
     <ClInclude Include="animate.h" />
     <ClInclude Include="collider.h" />
@@ -169,11 +170,11 @@
     <ClInclude Include="command_controller_check_action.h" />
     <ClInclude Include="command_controller_move.h" />
     <ClInclude Include="command_controller_pause.h" />
-    <ClInclude Include="command_dynamic_render.h" />
+    <ClInclude Include="command_render_dynamic.h" />
     <ClInclude Include="command_frame_animation.h" />
     <ClInclude Include="command_movement.h" />
     <ClInclude Include="command_movement_animation.h" />
-    <ClInclude Include="command_static_render.h" />
+    <ClInclude Include="command_render_static.h" />
     <ClInclude Include="components.h" />
     <ClInclude Include="component_animation.h" />
     <ClInclude Include="component_collision.h" />
@@ -205,6 +206,7 @@
   <ItemGroup>
     <ClCompile Include="asset_manager.cpp" />
     <ClCompile Include="collider.cpp" />
+    <ClCompile Include="collider_boundary.cpp" />
     <ClCompile Include="collider_circle.cpp" />
     <ClCompile Include="collider_polygon.cpp" />
     <ClCompile Include="collision_world.cpp" />
@@ -213,11 +215,11 @@
     <ClCompile Include="command_controller_check_action.cpp" />
     <ClCompile Include="command_controller_move.cpp" />
     <ClCompile Include="command_controller_pause.cpp" />
-    <ClCompile Include="command_dynamic_render.cpp" />
+    <ClCompile Include="command_render_dynamic.cpp" />
     <ClCompile Include="command_frame_animation.cpp" />
     <ClCompile Include="command_movement.cpp" />
     <ClCompile Include="command_movement_animation.cpp" />
-    <ClCompile Include="command_static_render.cpp" />
+    <ClCompile Include="command_render_static.cpp" />
     <ClCompile Include="component_animation.cpp" />
     <ClCompile Include="component_collision.cpp" />
     <ClCompile Include="component_movement.cpp" />
