--- a/IntelligenceQuest/IntelligenceQuest.vcxproj.filters
+++ b/IntelligenceQuest/IntelligenceQuest.vcxproj.filters
@@ -119,9 +119,6 @@
     <ClInclude Include="command_frame_animation.h">
       <Filter>Commands\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="command_movement.h">
-      <Filter>Commands\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="command_movement_animation.h">
       <Filter>Commands\Header Files</Filter>
     </ClInclude>
@@ -209,6 +206,12 @@
     <ClInclude Include="command_render_dynamic.h">
       <Filter>Commands\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="component_physics.h">
+      <Filter>Components\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="command_force.h">
+      <Filter>Commands\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -245,9 +248,6 @@
       <Filter>Commands\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="command_frame_animation.cpp">
-      <Filter>Commands\Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="command_movement.cpp">
       <Filter>Commands\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="command_movement_animation.cpp">
@@ -317,6 +317,12 @@
       <Filter>Commands\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="command_render_dynamic.cpp">
+      <Filter>Commands\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="component_physics.cpp">
+      <Filter>Components\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="command_force.cpp">
       <Filter>Commands\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
